/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.14/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

javafx {
    version = '21'
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web']
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter
    
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava
    implementation "net.sf.jasperreports:jasperreports:7.0.1"
    implementation "net.sf.jasperreports:jasperreports-pdf:7.0.1" //Exportar PDF


    implementation "org.controlsfx:controlsfx:11.2.2"
    implementation "com.google.code.gson:gson:2.10.1"     //JSON
    implementation "org.apache.poi:poi-ooxml:5.2.5"        // EXCEL
    implementation "com.mysql:mysql-connector-j:8.4.0"
    implementation "com.opencsv:opencsv:5.9"
    implementation "net.sf.jasperreports:jasperreports-charts:7.0.1"
    implementation "net.sf.jasperreports:jasperreports-chart-themes:7.0.1"    
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'app.App'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

tasks.named("run") {
    jvmArgs += [
       "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
    ]
}

sourceSets {
        main {
        resources {
        srcDirs = ["src/main/resources"]
        includes = ["**/*.fxml","**/*.css","**/*.png","**/*.html","**/*.jasper","**/*.jrxml"] //Incluir cualquier fichero de recurso
        }
    }
}

shadowJar {
    mergeServiceFiles()
    archiveClassifier = 'all'
}

task jpackageWindows(type: Exec) {
    dependsOn shadowJar
    workingDir projectDir
    commandLine 'jpackage',
        '--name', 'AppProyecto',
        '--input', "${buildDir}/libs",
        '--main-jar', "app-all.jar",
        '--main-class', 'app.App',
        '--type', 'exe',
        '--icon', "${projectDir}/installer/windows/icon.ico",
        '--app-version', '1.0',
        '--dest', "${buildDir}/dist/windows",
        '--win-menu',
        '--win-shortcut',
        '--java-options', '--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED'
}

task jpackageLinux(type: Exec) {
    dependsOn shadowJar
    workingDir projectDir
    commandLine 'jpackage',
        '--name', 'AppProyecto',
        '--input', "${buildDir}/libs",
        '--main-jar', "app-all.jar",
        '--main-class', 'app.App',
        '--type', 'deb',
        '--icon', "${projectDir}/installer/linux/icon.png",
        '--app-version', '1.0',
        '--dest', "${buildDir}/dist/linux",
        '--linux-menu-group', 'Game',
        '--linux-shortcut',
        '--resource-dir', "${projectDir}/installer/linux",
        '--java-options', '--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED'
}
